# taskflow

./: .dockerignore  .env.dev.example  .env.example  .env.production.example  .gitignore  CLAUDE.md  DEPLOYMENT.md  DEVELOPMENT.md  QUICKSTART.md  conftest.py  django.md  docker-compose.prod.yml  docker-compose.yml  openapi.yml  pyproject.toml  requirements.txt  tech.md
.github/workflows/: ci.yml
apps/comments/: admin.py  apps.py  models.py  permissions.py  selectors.py  serializers.py  services.py  tasks.py  views.py
apps/comments/api/: __init__.py  permissions.py  serializers.py  urls.py  views.py
apps/comments/migrations/: 0001_initial.py
apps/comments/tests/: conftest.py  factories.py  test_api.py  (+1 more)
apps/projects/: admin.py  apps.py  models.py  permissions.py  selectors.py  serializers.py  services.py  tasks.py  urls.py  views.py
apps/tags/: admin.py  apps.py  models.py  permissions.py  selectors.py  serializers.py  services.py  views.py
apps/tasks/: admin.py  apps.py  models.py  selectors.py  serializers.py  services.py  tasks.py  urls.py  views.py
apps/users/: admin.py  managers.py  models.py  selectors.py  serializers.py  services.py  tasks.py  views.py
apps/websocket/: apps.py  consumers.py  routing.py  serializers.py  tasks.py
config/: asgi.py  celery.py  urls.py
config/settings/: base.py  local.py  production.py  test.py
core/: cache.py  event_types.py  exception_handler.py  exceptions.py  middleware.py  websocket.py
core/api_docs/: __init__.py  decorators.py  examples.py  responses.py
docker/: Dockerfile  Dockerfile.prod  entrypoint.sh
docker/nginx/: nginx.conf
scripts/: README.md  deploy.sh  setup-ssl.sh
(+45 files in other folders)
